tests/ui/no_unit.stderr
error: At least one unit description must be given via attribute `unit`.
  --> tests/ui/no_unit.rs:13:1
   |
13 | #[quantity]
   | ^^^^^^^^^^^
   |
   = help: Use `#[unit(<ident>, "<symbol>", <si_prefix>, <scale>, "<doc>")]`
           or  `#[unit(<ident>, "<symbol>", <si_prefix>, <scale>)]`
           or  `#[unit(<ident>, "<symbol>", <scale>, "<doc>")]`
           or  `#[unit(<ident>, "<symbol>", <scale>)]`
           or  `#[unit(<ident>, "<symbol>", "<doc>")]`
           or  `#[unit(<ident>, "<symbol>")]`.
   = note: this error originates in the attribute macro `quantity` (in Nightly builds, run with -Z macro-backtrace for more info)
